[package]
name = "mender"
version = "0.1.0"
edition = "2021"
description = "Failure triage and repair planner — clusters errors, maps to files, suggests fix order"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
